--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
+gunicorn==19.9.0
 dj-database-url==0.5.0
 Django==2.0
 django-extensions==2.0.7
 django-filter==1.1.0
 djangorestframework==3.8.2
-whitenoise==3.2
+whitenoise==3.3.1
